--- a/prototype/index.html
+++ b/prototype/index.html
@@ -6,5 +6,5 @@
     <body>
 
     <body>
-    <script type="text/javascript" src="./bundle.js"></script>
+    <script type="text/javascript" src="./lib/bundle.js"></script>
 </html>
